--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Météo</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="Meteo.png">  <!-- Dodato za ikonu -->
-    <link rel="apple-touch-icon" sizes="512x512" href="Meteo.png">  <!-- Dodato za apple ikonu -->
-    <link rel="manifest" href="manifest.json">  <!-- Verifikujte da imate manifest -->
+    <link rel="icon" type="image/png" href="Meteo-180x180.png">  <!-- Favicon ikona -->
+    <link rel="apple-touch-icon" sizes="192x192" href="Meteo-192x192.png">  <!-- Ikona za Apple uređaje -->
+    <link rel="manifest" href="manifest.json">  <!-- Povezivanje manifest fajla -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
     <div class="weather-container">
         <h1 class="title">Prévisions Météo</h1>
