--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Météo</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="Meteo-180x180.png">  <!-- Favicon ikona -->
-    <link rel="apple-touch-icon" sizes="192x192" href="Meteo-192x192.png">  <!-- Ikona za Apple uređaje -->
-    <link rel="manifest" href="manifest.json">  <!-- Povezivanje manifest fajla -->
+
+    <!-- Ikone i manifest za PWA -->
+    <link rel="icon" type="image/png" sizes="180x180" href="Meteo-180x180.png"> <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="Meteo-180x180.png"> <!-- Apple 180x180 -->
+    <link rel="apple-touch-icon" sizes="192x192" href="Meteo-192x192.png"> <!-- Apple 192x192 -->
+    <link rel="apple-touch-icon" sizes="512x512" href="Meteo-512x512.png"> <!-- Apple 512x512 -->
+    <link rel="manifest" href="manifest.json"> <!-- Manifest fajl za PWA -->
+
+    <!-- Meta tagovi za iOS optimizaciju -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Météo">
+    
+    <!-- Učitajte jQuery biblioteku -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
@@ -27,15 +38,15 @@
             <img id="weather-icon" class="weather-icon" alt="Weather Icon">
             <p class="weather-item"><span id="temperature">--</span>°C</p>
             <p class="weather-item">Humidité: <span id="humidity">--</span>%</p>
-            <p class="weather-item">Vitesse du vent: <span id="wind-speed">--</span> m/s</p> <!-- Brzina vetra -->
-            <p class="weather-item">Précipitations: <span id="precipitation">--</span> mm</p> <!-- Padavine -->
-            <p class="weather-item">UV Index: <span id="uv-index">--</span></p> <!-- UV indeks -->
-            <p class="weather-item">Pollution Index: <span id="pollution">--</span></p> <!-- Indeks polucije -->
+            <p class="weather-item">Vitesse du vent: <span id="wind-speed">--</span> m/s</p>
+            <p class="weather-item">Précipitations: <span id="precipitation">--</span> mm</p>
+            <p class="weather-item">UV Index: <span id="uv-index">--</span></p>
+            <p class="weather-item">Pollution Index: <span id="pollution">--</span></p>
             <p class="weather-item description"><span id="description">--</span></p>
         </div>
     </div>
 
-    <!-- JavaScript za registraciju Service Workera -->
+    <!-- Registracija Service Workera -->
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('/worker.js')
